--- a/my-app/package.json
+++ b/my-app/package.json
@@ -31,7 +31,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-image-magnify": "^2.7.4",
+    "react-image-zoom": "^1.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
