--- a/backendRM/.env
+++ b/backendRM/.env
@@ -1,8 +1,8 @@
-MONGO_URI=mongodb+srv://abhiam:UOS6QTLb8yEkZN5M@abhig.66fbs.mongodb.net/MYDatabaseMY
+MONGO_URI=mongodb+srv://kanhaiyallalm:gbFmt9Igk71iaW9x@cluster0.fpnys.mongodb.net/MYdatabase
 JWT_SECRET=your_jwt_secret_key
 PORT=5000
 JWT_EXPIRE=1d
 
-CLOUD_NAME=dxrvalpmb
-API_KEY=623282986487112
-API_SECRET=SWcccbMaZFDScyjuHVt5r1zAkUo
+CLOUD_NAME=dfhoki1bx
+API_KEY=676562166752731
+API_SECRET=GF9a-5HPnRer6fpBYD4waSx2dyY
