--- a/backendRM/.env
+++ b/backendRM/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://kanhaiyallalm:gbFmt9Igk71iaW9x@cluster0.fpnys.mongodb.net/MYdatabase
+MONGO_URI=mongodb+srv://kanhaiyallalm:gbFmt9Igk71iaW9x@cluster0.fpnys.mongodb.net/MYDB?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_jwt_secret_key
 PORT=5000
 JWT_EXPIRE=1d
