--- a/backendRM/.env
+++ b/backendRM/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://kanhaiyallalm:gbFmt9Igk71iaW9x@cluster0.fpnys.mongodb.net/MYDB?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://rakeshRKM:RKMWEB@rakeshm.lnzxe.mongodb.net/mynewdata?retryWrites=true&w=majority&appName=RakeshM
 JWT_SECRET=your_jwt_secret_key
 PORT=5000
 JWT_EXPIRE=1d
@@ -6,3 +6,4 @@ JWT_EXPIRE=1d
 CLOUD_NAME=dfhoki1bx
 API_KEY=676562166752731
 API_SECRET=GF9a-5HPnRer6fpBYD4waSx2dyY
+
